--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "express": "^4.16.2",
     "mysql2": "^1.5.1",
-    "sequelize": "^4.29.0"
+    "path": "^0.12.7",
+    "sequelize": "^4.29.0",
+    "sequelize-cli": "^3.2.0"
   }
 }
